# timescaledb-parallel-copy-lib

./: .gitiginore  README.md  go.mod  go.sum  setup.cfg  setup.py
test/: conftest.py  get_latest_timescale_image.sh  setup_timescale_ubuntu.sh  test_tsdb_parallel_copy.py
tsdb_parallel_copy/: tsdb_parallel_copy.c  tsdb_parallel_copy.go
tsdb_parallel_copy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
