[metadata]
name = tsdb_parallel_copy
description = Pythonic parallel copy utility for Timescale based on their Go implementation
author = AIM Group
platforms = linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    tsdb_parallel_copy
python_requires = >=3.8
setup_requires =
    setuptools-golang
package_dir =
    =.
zip_safe = no

[options.extras_require]

testing =
    genbadge[coverage,tests]>=1.1.0
    packaging>=21.3
    pandas
    pre-commit>=2.20
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    ruff
    tox>=3.24

[flake8]
max-line-length = 160
extend-ignore = E203, E251, E402, W503, E741
